Name:		weblogger-server
Version:	0.0
Synopsis:	simple weblogger server
Description: 	simple weblogger server
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8

Executable weblogger-server
  Main-is: weblogger-server.hs
  hs-source-dirs: exe
  Build-Depends: base == 4.*, 
                 yesod == 1.1.*, 
                 uuid == 1.2.*,
                 bytestring == 0.9.*, 
                 containers == 0.4.*, 
                 acid-state == 0.6.*, 
                 weblogger-type == 0.0.*,
                 weblogger-server
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base == 4.*, 
                 containers == 0.4.*, 
                 mtl == 2.1.*, 
                 yesod == 1.1.*, 
                 safecopy == 0.6.*, 
                 acid-state == 0.6.*, 
                 aeson == 0.6.*, 
                 blaze-markup == 0.5.*,
                 bytestring == 0.9.*, 
                 conduit == 0.5.*, 
                 uuid == 1.2.*,
                 wai-extra == 1.3.*, 
                 wai == 1.3.*,
                 attoparsec == 0.10.*, 
                 text == 0.11.*, 
                 yesod-core == 1.1.*, 
                 yesod-form == 1.1.*, 
                 blaze-html == 0.5.*,
                 weblogger-type == 0.0.* 

  Exposed-Modules: 
                   Application.WebLogger.Server.Type
                   Application.WebLogger.Server.Yesod



		 